syntax = "proto3";

option csharp_namespace = "Team8.Contracts.Room.Service";

package Room;

service RoomService {
  rpc CreateRoom (CreateRoomModel) returns (RoomId);
  rpc GetRooms (Void) returns (RoomsModel);
  rpc ConnectRoom (ConnectRoomModel) returns (RoomModel);
  rpc DisconnectRoom (RoomActionModel) returns (RequestModel);
  rpc ToggleReadiness (RoomActionModel) returns (RequestModel);
  rpc StartBattle (RoomActionModel) returns (RequestModel);
}

message CreateRoomModel {
  string title = 1;
  string pass = 2;
}

message RoomsModel {
  repeated RoomModel models = 1;
}

message RoomModel {
  int32 id = 1;
  string title = 2;
  int32 status = 3;
  string nameCurrentMap = 4;
  int32 currentRound = 5;
}

message ConnectRoomModel {
  int32 id = 1;
  string pass = 2;
}

message UserModel {
  string id = 1;
}

message RoomId {
  int32 id = 1;
}

message Void {}

message RequestModel{
  bool ok = 1;
  optional string message = 2;
}

message RoomActionModel {
    UserModel user = 1;
    RoomId room = 2;
}