syntax = "proto3";

option csharp_namespace = "Team8.Contracts.Auth.Server";

package Auth;

service AuthService {
  rpc Login (LoginModel) returns (Token);
  rpc Register (RegisterModel) returns (UUID);
}

message LoginModel {
  string login = 1;
  string password = 2;
}

message Token {
  string message = 1;
}

message RegisterModel{
  string login = 1;
  string password = 2;
  string nick = 3;
}

message UUID {
  string value = 1;
}


